Fixed background on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,16 @@
     display: none;
 }
 
+header {
+    overflow: hidden;
+    background: url(../images/trees.jpeg) no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    height: 100%;
+}
+
 @media (max-width: 1800px) {
     header .image-container {
         margin: 40px 80px;
@@ -11,6 +21,9 @@
 @media (min-width: 768px) {
     #mainNav {
         display: block;
+    }
+    header {
+        background-attachment: fixed;
     }
 }
 
@@ -69,16 +82,6 @@
 
 section.information {
     padding: 100px 0 80px 0;
-}
-
-header {
-    overflow: hidden;
-    background: url(../images/trees.jpeg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: 100%;
 }
 
 .logo {
